--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,6 +47,8 @@ r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.AntiAliasingMethod=4
+r.Mobile.AntiAliasing=2
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
